feat: adding styling to login page

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -8,8 +8,9 @@
     /*    @apply col-span-full md:col-span-6 lg:col-span-4 xl:col-span-3 bg-codeupGreen bg-opacity-70 rounded-md flex flex-col justify-between dark:text-gray-200*/
     /*}*/
     .body-bg {
-        background-color: #9921e8;
-        background-image: linear-gradient(315dg, #9921e8 0%, #5f72be 74%);
+        background-color: #3FE821;
+        background-image: linear-gradient(315dg, #213416 0%, #3FE821 74%);
+        opacity: 70%;
     }
 
 }
