--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -6,7 +6,7 @@
 </head>
 
 <nav th:include="partials/navbar" :: navbar></nav>
-<body class="body-bg min-h-screen pt-12 md:pt-20 pb-6 px-2 md:px-0">
+<body class="bg-greenCustom-700 min-h-screen pt-12 md:pt-20 pb-6 px-2 md:px-0">
 
     <main class="bg-whiteCustom max-w-lg mx-auto p-8 md:p-12 my-10 rounded-lg shadow-2xl">
 
