--- a/src/main/resources/templates/users/sign-up.html
+++ b/src/main/resources/templates/users/sign-up.html
@@ -6,7 +6,7 @@
 </head>
 
 <nav th:include="partials/navbar" :: navbar></nav>
-<body class="body-bg min-h-screen pt-12 md:pt-20 pb-6 px-2 md:px-0">
+<body class="bg-greenCustom-700 min-h-screen pt-12 md:pt-20 pb-6 px-2 md:px-0">
 
 
     <header class="max-w-lg mx-auto">
