feat: various changes with fonts and colors

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -13,4 +13,12 @@
         opacity: 70%;
     }
 
+    .montserrat {
+        font-family: 'Montserrat', sans-serif;
+    }
+
+    .quicksand {
+        font-family: 'Quicksand', sans-serif;
+    }
+
 }
