--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -19,7 +19,7 @@
 <!--                MENU-->
 <!--            </p>-->
         </div>
-        <ul class="flex flex-row" id="mobileMenu">
+        <ul class="flex flex-row montserrat" id="mobileMenu">
 
             <li class="border-double p-1.5">
                 <form th:action="@{/posts}">
