--- a/src/main/resources/templates/partials/footer.html
+++ b/src/main/resources/templates/partials/footer.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 
-<!--<footer th:fragment="footer" class="bg-grayCustom text-indigo-100 flex justify-around bottom-0">-->
-<!--    <p>XPerience</p>-->
-<!--</footer>-->
+<footer th:fragment="footer" class="bg-grayCustom text-whiteCustom flex justify-center max-w-lg mx-auto">
+    <p>XPerience</p>
+    <!-- put in Contact links later -->
+</footer>
 </body>
 </html>
