--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -8,7 +8,7 @@
     /*    @apply col-span-full md:col-span-6 lg:col-span-4 xl:col-span-3 bg-codeupGreen bg-opacity-70 rounded-md flex flex-col justify-between dark:text-gray-200*/
     /*}*/
     .body-bg {
-        background-color: #3FE821;
+        background-color: #000000;
         background-image: linear-gradient(315dg, #213416 0%, #3FE821 74%);
         opacity: 70%;
     }
