--- a/src/main/resources/static/css/tailwind.css
+++ b/src/main/resources/static/css/tailwind.css
@@ -592,7 +592,7 @@ video {
 /*}*/
 
 .body-bg {
-  background-color: #3FE821;
+  background-color: #000000;
   background-image: linear-gradient(315dg, #213416 0%, #3FE821 74%);
   opacity: 70%;
 }
