feat: various changes with fonts and colors

--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -6,7 +6,7 @@
     <!-- include stylesheets, etc here -->
     <link rel="stylesheet" type="text/css" href="/css/tailwind.css">
 </head>
-<body class="body-bg">
+<body class="bg-lightGrayCustom">
 
 <div class="w-full">
     <nav th:fragment="navbar" class="bg-blackCustom flex justify-between">
