feat: adding font stylesheet links to each page

--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -3,6 +3,10 @@
 <head th:fragment="head">
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="/css/tailwind.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <title>Header</title>
     <!-- include stylesheets, etc here -->
 </head>
