--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -5,6 +5,10 @@
     <title>Home</title>
     <!-- include stylesheets, etc here -->
     <link rel="stylesheet" type="text/css" href="/css/tailwind.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
 </head>
 <body class="bg-lightGrayCustom">
 
