--- a/src/main/resources/templates/users/sign-up.html
+++ b/src/main/resources/templates/users/sign-up.html
@@ -53,11 +53,11 @@
 
     </main>
 
-    <div class="max-w-lg max-auto flex justify-center text-center text-whiteCustom">
-        <p class="text-whiteCustom">Already have an account?</p><a th:href="@{|/login|}" class="font-bold hover:underline">Sign Up!</a>
+    <div class="max-w-lg max-auto flex items-center text-center text-blackCustom">
+        <p>Already have an account?</p><a th:href="@{|/login|}" class="font-bold hover:underline">Sign Up!</a>
     </div>
 
-    <footer th:include="partials/footer" :: footer></footer>
+<!--    <footer th:include="partials/footer" :: footer></footer>-->
 
 </body>
 </html>
