--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -30,14 +30,19 @@
                     <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3 montserrat" for="password">Password</label>
                     <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-gray-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="password" name="password" type="password" />
                 </div>
-                <div class="justify-center">
+                <div class="text-center">
                     <input class="g-darkGreenCustom-600 hover:bg-greenCustom-700 text-whiteCustom font-bold py-2 rounded shadow-lg hover:shadow-xl transition duration-200 montserrat" type="submit" value="Log In" />
                 </div>
             </form>
         </section>
-        <section>
+        <section class="text-center">
             <div th:if="${param.error}" class="montserrat text-center">
                 <p>Invalid Username and Password.</p>
+            </div>
+        </section>
+        <section class="text-center">
+            <div class="max-w-lg max-auto flex justify-center text-center text-blackCustom">
+                <p class="justify-center">Don't have an account?</p><a th:href="@{|/sign-up|}" class="font-bold hover:underline">Sign Up!</a>
             </div>
         </section>
         <!--<div th:if="${param.logout}">-->
@@ -45,9 +50,6 @@
         <!--</div>-->
     </main>
 
-    <div class="max-w-lg max-auto flex justify-center text-center text-blackCustom">
-        <p class="justify-center">Don't have an account?</p><a th:href="@{|/sign-up|}" class="font-bold hover:underline">Sign Up!</a>
-    </div>
 
     <footer th:include="partials/footer" :: footer></footer>
 
