feat: updating fonts and form styles across project

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,12 +15,12 @@
 <!--<header th:include="partials/header" :: header></header>-->
 <div>
     <div class="welcome flex flex-row justify-center items-center">
-        <p class="text-5xl mr-3 pb-2">Welcome to</p>
+        <p class="text-5xl mr-3 pb-2 montserrat">Welcome to</p>
         <img class="h-15 pt-2" src="img/XPeriencelogo.png" alt="big-logo">
     </div>
     <div class="flex justify-center">
         <div class="p-1.5">
-            <a th:href="@{|/posts|}" class="border border-3 p-1.5 bg-greenCustom">VIEW ALL XPeriences</a>
+            <a th:href="@{|/posts|}" class="border border-3 p-1.5 bg-greenCustom quicksand">VIEW ALL XPeriences</a>
         </div>
 <!--        <div class="p-1.5">-->
 <!--            <a th:href="@{|/posts/search|}" class="border border-3 p-1.5">Search XPeriences...</a>-->
@@ -29,7 +29,7 @@
     </div>
 
     <div class="flex justify-center">
-        <p>Not a member? <a th:href="@{|/sign-up|}" class="underline focus-within:bg-greenLime">Join now</a> to help others like you get information about jobs they want!</p>
+        <p class="montserrat">Not a member? <a th:href="@{|/sign-up|}" class="underline focus-within:bg-greenLime quicksand">Join now</a> to help others like you get information about jobs they want!</p>
     </div>
 </div>
 
