--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -40,9 +40,10 @@
                 <p>Invalid Username and Password.</p>
             </div>
         </section>
+        <hr>
         <section class="text-center">
-            <div class="max-w-lg max-auto flex justify-center text-center text-blackCustom">
-                <p class="justify-center">Don't have an account?</p><a th:href="@{|/sign-up|}" class="font-bold hover:underline">Sign Up!</a>
+            <div class="max-w-lg mx-auto flex justify-center text-center text-blackCustom">
+                <p class="justify-center montserrat">Don't have an account?</p><a th:href="@{|/sign-up|}" class="font-bold hover:underline quicksand">Sign Up!</a>
             </div>
         </section>
         <!--<div th:if="${param.logout}">-->
@@ -51,7 +52,7 @@
     </main>
 
 
-    <footer th:include="partials/footer" :: footer></footer>
+<!--    <footer th:include="partials/footer" :: footer></footer>-->
 
 </body>
 </html>
