--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -31,7 +31,7 @@
                     <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-gray-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="password" name="password" type="password" />
                 </div>
                 <div class="text-center">
-                    <input class="g-darkGreenCustom-600 hover:bg-greenCustom-700 text-whiteCustom font-bold py-2 rounded shadow-lg hover:shadow-xl transition duration-200 montserrat" type="submit" value="Log In" />
+                    <input class="g-darkGreenCustom-600 hover:bg-greenCustom-700 text-whiteCustom font-bold py-2 rounded shadow-lg hover:shadow-xl transition duration-200 montserrat mb-3" type="submit" value="Log In" />
                 </div>
             </form>
         </section>
@@ -42,7 +42,7 @@
         </section>
         <hr>
         <section class="text-center">
-            <div class="max-w-lg mx-auto flex justify-center text-center text-blackCustom">
+            <div class="max-w-lg mx-auto flex justify-center text-center text-blackCustom mt-2">
                 <p class="justify-center montserrat">Don't have an account? </p><a th:href="@{|/sign-up|}" class="font-bold hover:underline quicksand">Sign Up!</a>
             </div>
         </section>
