feat: color updates to match theme; updating spacing on login and signup pages

--- a/src/main/resources/templates/users/sign-up.html
+++ b/src/main/resources/templates/users/sign-up.html
@@ -14,8 +14,8 @@
 <body class="min-h-screen pt-12 md:pt-20 pb-6 px-2 md:px-0">
 
 
-    <header class="max-w-lg mx-auto">
-        <h1 class="text-4xl font-bold text-whiteCustom text-center montserrat">Welcome to XPerience!</h1>
+    <header class="max-w-lg mx-auto mt-3">
+        <h1 class="text-4xl font-bold text-blackCustom text-center montserrat">Welcome to XPerience!</h1>
     </header>
 
     <main class="bg-whiteCustom max-w-lg mx-auto p-8 md:p-12 my-10 rounded-lg shadow-2xl">
@@ -29,18 +29,18 @@
             <form th:action="@{/sign-up}" method="POST" th:object="${user}" class="flex flex-col">
                <div class="mb-6 pt-3 rounded bg-grayCustom-200">
                     <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3 montserrat" for="username">Username</label>
-                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-gray-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="username" th:field="*{username}" />
+                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-greenCustom-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="username" th:field="*{username}" />
                </div>
                 <div class="mb-6 pt-3 rounded bg-gray-200">
                     <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3 montserrat" for="email">Email</label>
-                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-gray-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="email" th:field="*{email}" />
+                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-grayCustom-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="email" th:field="*{email}" />
                 </div>
                 <div class="mb-6 pt-3 rounded bg-gray-200">
                     <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3 montserrat" for="password">Password</label>
-                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-gray-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="password" type="password" th:field="*{password}" />
+                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-greenCustom-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="password" type="password" th:field="*{password}" />
                 </div>
                 <div>
-                    <input class="bg-darkGreenCustom-600 hover:bg-greenCustom-700 text-whiteCustom font-bold py-2 rounded shadow-lg hover:shadow-xl transition duration-200 montserrat" value="Sign me up!" type="submit" />
+                    <input class="bg-darkGreenCustom-600 hover:bg-greenCustom-700 text-whiteCustom font-bold p-2 rounded shadow-lg hover:shadow-xl hover: bg-darkGreenCustom transition duration-200 montserrat mb-5" value="Sign me up!" type="submit" />
                 </div>
             </form>
         </section>
@@ -50,10 +50,10 @@
                 Username already exists in database.
             </div>
         </section>
-
+        <hr>
         <section class="text-center">
-            <div class="max-w-lg mx-auto flex items-center text-center text-blackCustom">
-                <p class="montserrat">Already have an account?</p><a th:href="@{|/login|}" class="font-bold hover:underline quicksand">Sign Up!</a>
+            <div class="max-w-lg mx-auto flex justify-center text-blackCustom">
+                <p class="justify-center montserrat">Already have an account?</p><a th:href="@{|/login|}" class="font-bold hover:underline quicksand"> Sign Up!</a>
             </div>
         </section>
 
