--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -24,14 +24,14 @@
             <form th:action="@{/login}" method="post" class="flex flex-col">
                 <div class="mb-6 pt-3 rounded bg-grayCustom-200">
                     <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3 montserrat" for="username">Username</label>
-                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-gray-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="username" name="username" type="text" />
+                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-greenCustom-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="username" name="username" type="text" />
                 </div>
                 <div class="mb-6 pt-3 rounded bg-grayCustom-200">
                     <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3 montserrat" for="password">Password</label>
-                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-gray-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="password" name="password" type="password" />
+                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-greenCustom-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="password" name="password" type="password" />
                 </div>
                 <div class="text-center">
-                    <input class="g-darkGreenCustom-600 hover:bg-greenCustom-700 text-whiteCustom font-bold py-2 rounded shadow-lg hover:shadow-xl transition duration-200 montserrat mb-3" type="submit" value="Log In" />
+                    <input class="g-darkGreenCustom-600 hover:bg-greenCustom-700 text-whiteCustom font-bold p-2 rounded hover:bg-darkGreenCustom shadow-lg hover:shadow-xl transition duration-200 montserrat mb-5" type="submit" value="Log In" />
                 </div>
             </form>
         </section>
@@ -43,7 +43,7 @@
         <hr>
         <section class="text-center">
             <div class="max-w-lg mx-auto flex justify-center text-center text-blackCustom mt-2">
-                <p class="justify-center montserrat">Don't have an account? </p><a th:href="@{|/sign-up|}" class="font-bold hover:underline quicksand">Sign Up!</a>
+                <p class="justify-center montserrat">Don't have an account? </p><a th:href="@{|/sign-up|}" class="font-bold hover:underline quicksand"> Sign Up!</a>
             </div>
         </section>
         <!--<div th:if="${param.logout}">-->
