feat: color updates to match theme; updating spacing on login and signup pages

--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -31,7 +31,7 @@
                     <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-greenCustom-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="password" name="password" type="password" />
                 </div>
                 <div class="text-center">
-                    <input class="g-darkGreenCustom-600 hover:bg-greenCustom-700 text-whiteCustom font-bold p-2 rounded hover:bg-darkGreenCustom shadow-lg hover:shadow-xl transition duration-200 montserrat mb-5" type="submit" value="Log In" />
+                    <input class="bg-darkGreenCustom-600 hover:bg-greenCustom-700 text-whiteCustom font-bold p-2 rounded hover:text-blackCustom shadow-lg hover:shadow-xl transition duration-200 montserrat mb-5" type="submit" value="Log In" />
                 </div>
             </form>
         </section>
