--- a/src/main/resources/templates/users/sign-up.html
+++ b/src/main/resources/templates/users/sign-up.html
@@ -40,7 +40,7 @@
                     <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-greenCustom-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="password" type="password" th:field="*{password}" />
                 </div>
                 <div>
-                    <input class="bg-darkGreenCustom-600 hover:bg-greenCustom-700 text-whiteCustom font-bold p-2 rounded shadow-lg hover:shadow-xl hover: bg-darkGreenCustom transition duration-200 montserrat mb-5" value="Sign me up!" type="submit" />
+                    <input class="bg-darkGreenCustom-600 hover:bg-greenCustom-700 text-whiteCustom font-bold p-2 rounded shadow-lg hover:shadow-xl hover:text-blackCustom transition duration-200 montserrat mb-5" value="Sign me up!" type="submit" />
                 </div>
             </form>
         </section>
@@ -52,8 +52,8 @@
         </section>
         <hr>
         <section class="text-center">
-            <div class="max-w-lg mx-auto flex justify-center text-blackCustom">
-                <p class="justify-center montserrat">Already have an account?</p><a th:href="@{|/login|}" class="font-bold hover:underline quicksand"> Sign Up!</a>
+            <div class="max-w-lg mx-auto flex justify-center text-blackCustom mt-3">
+                <p class="justify-center montserrat">Already have an account? </p><a th:href="@{|/login|}" class="font-bold hover:underline quicksand"> Sign Up!</a>
             </div>
         </section>
 
