feat: centering buttons

--- a/src/main/resources/templates/users/sign-up.html
+++ b/src/main/resources/templates/users/sign-up.html
@@ -39,7 +39,7 @@
                     <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3 montserrat" for="password">Password</label>
                     <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-greenCustom-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="password" type="password" th:field="*{password}" />
                 </div>
-                <div>
+                <div class="text-center">
                     <input class="bg-darkGreenCustom-600 hover:bg-greenCustom-700 text-whiteCustom font-bold p-2 rounded shadow-lg hover:shadow-xl hover:text-blackCustom transition duration-200 montserrat mb-5" value="Sign me up!" type="submit" />
                 </div>
             </form>
