feat: centering buttons

--- a/src/main/resources/templates/users/sign-up.html
+++ b/src/main/resources/templates/users/sign-up.html
@@ -14,9 +14,9 @@
 <body class="min-h-screen pt-12 md:pt-20 pb-6 px-2 md:px-0">
 
 
-    <header class="max-w-lg mx-auto mt-3">
-        <h1 class="text-4xl font-bold text-blackCustom text-center montserrat">Welcome to XPerience!</h1>
-    </header>
+<!--    <header class="max-w-lg mx-auto mt-3">-->
+<!--        <h1 class="text-4xl font-bold text-blackCustom text-center montserrat">Welcome to XPerience!</h1>-->
+<!--    </header>-->
 
     <main class="bg-whiteCustom max-w-lg mx-auto p-8 md:p-12 my-10 rounded-lg shadow-2xl">
 
@@ -33,7 +33,7 @@
                </div>
                 <div class="mb-6 pt-3 rounded bg-gray-200">
                     <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3 montserrat" for="email">Email</label>
-                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-grayCustom-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="email" th:field="*{email}" />
+                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-greenCustom-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="email" th:field="*{email}" />
                 </div>
                 <div class="mb-6 pt-3 rounded bg-gray-200">
                     <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3 montserrat" for="password">Password</label>
