--- a/src/main/resources/templates/users/sign-up.html
+++ b/src/main/resources/templates/users/sign-up.html
@@ -11,9 +11,11 @@
 </head>
 
 <nav th:include="partials/navbar" :: navbar></nav>
-<body class="min-h-screen pt-12 md:pt-20 pb-6 px-2 md:px-0">
+<body class="min-h-screen pt-12 md:pt-20 pb-6 px-2 md:px-0 flex flex-row">
 
-
+    <main>
+        <img src="img/sign-up.jpg" alt="Sign up image from Pexels.">
+    </main>
 <!--    <header class="max-w-lg mx-auto mt-3">-->
 <!--        <h1 class="text-4xl font-bold text-blackCustom text-center montserrat">Welcome to XPerience!</h1>-->
 <!--    </header>-->
