--- a/src/main/resources/templates/users/sign-up.html
+++ b/src/main/resources/templates/users/sign-up.html
@@ -11,10 +11,10 @@
 </head>
 
 <nav th:include="partials/navbar" :: navbar></nav>
-<body class="min-h-screen pt-12 md:pt-20 pb-6 px-2 md:px-0 flex flex-row space-around">
+<body class="min-h-screen pt-12 md:pt-20 pb-6 px-2 md:px-0 flex flex-row space-around" src="img/sign-up.jpg">
 
     <div class="background">
-        <img class="max-w-md mx-auto" src="img/sign-up.jpg" alt="Sign up image from Pexels.">
+<!--        <img class="max-w-md mx-auto" src="img/sign-up.jpg" alt="Sign up image from Pexels.">-->
 
 <!--    <header class="max-w-lg mx-auto mt-3">-->
 <!--        <h1 class="text-4xl font-bold text-blackCustom text-center montserrat">Welcome to XPerience!</h1>-->
